// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown dropdown matches snapshot 1`] = `
<div
  aria-invalid="false"
  class="ds-c-fieldset"
>
  <label
    class="ds-c-label"
    for="field_1"
    id="field_1-label"
  >
    <span
      class=""
    >
      
    </span>
  </label>
  <select
    aria-label="test aria label"
    class="ds-c-field"
    id="field_1"
    name="dropdown"
  >
    <option
      value="1"
    >
      1
    </option>
  </select>
</div>
`;

exports[`Dropdown renders a select menu 1`] = `
<select
  aria-label="test aria label"
  class="ds-c-field"
  id="field_2"
  name="dropdown"
>
  <option
    value="1"
  >
    1
  </option>
</select>
`;

exports[`Dropdown renders options correctly 1`] = `
<select
  class="ds-c-field"
  id="field_3"
  name="dropdown"
>
  <option
    selected=""
    value="1"
  >
    1
  </option>
  <option
    value="2"
  >
    2
  </option>
  <option
    value="3"
  >
    3
  </option>
  <option
    value="4"
  >
    4
  </option>
  <option
    value="5"
  >
    5
  </option>
  <option
    value="6"
  >
    6
  </option>
  <option
    value="7"
  >
    7
  </option>
  <option
    value="8"
  >
    8
  </option>
  <option
    value="9"
  >
    9
  </option>
  <option
    value="10"
  >
    10
  </option>
</select>
`;
